<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Roblu</string>
    <string-array name="alliances">
        <item>Red Alliance</item>
        <item>Blue Alliance</item>
    </string-array>

    <string-array name="form_types">
        <item>Create custom form</item>
        <item>Use a template form</item>
        <item>Use master form</item>
        <item>No form (create form later)</item>
    </string-array>

    <string-array name="verbose_types">
        <item>Only write observed metrics</item>
        <item>Write not observed metrics, but only if the team is edited</item>
        <item>Write all metrics, regardless of observed state</item>
    </string-array>

    <string-array name="file_types">
        <item>Export as .xslx (Excel)</item>
        <item>Export as .CSV</item>
    </string-array>

    <!-- Element helper text -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_time">0.0s</string>
    <string name="open">Open</string>
    <string name="contains_no_images">Contains 0 images</string>
    <string name="contains_one_image">Contains 1 image</string>
    <string name="edit_history">Edit history</string>
    <string name="Blue_Alliance_Team_Page">Blue Alliance team page</string>
    <string name="Team_website">Team website</string>

    <!-- Activity titles -->
    <string name="title_activity_predefined">Predefined</string>
    <string name="title_activity_team_viewer">TeamViewer</string>
    <string name="ui_preset">UI Preset</string>
    <string name="event_create_action">Create new event</string>
    <string name="teams_filter_teams">Filter teams</string>
    <string name="title_activity_create_event_view">Create Event</string>
    <string name="title_activity_create_form">Create Form</string>

    <string name="title_activity_create_event_picker">CreateEventPicker</string>
    <string name="title_activity_apievent_select">APIEventSelect</string>
    <string name="title_activity_add_element">AddElement</string>
    <string name="title_activity_tutorial">Tutorial</string>

    <!-- Sorting -->
    <string name="animation_direction">Animation Direction</string>
    <string name="filter_type">Filter type:</string>
    <string name="numerical">Numerical</string>
    <string name="alpha">Alphabetical</string>
    <string name="last_edited">Last edited</string>
    <string name="custom">Custom</string>

    <!-- Event editor -->
    <string name="metric_type">Metric type</string>

    <!-- Metric editor -->
    <string name="not_observed_yet">Not observed yet</string>
    <string name="s">s</string>


    <!-- Event creation -->
    <string name="cloud_team_warning">Choose wisely! This cannot be changed later.</string>
    <string name="frc_team_name">FRC Team name</string>
    <string name="event_name">Event name</string>
    <string name="form_type">Form type: </string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="tba_key">TBA key</string>

    <!-- Setup activity -->
    <string name="welcome_to">Welcome to</string>
    <string name="must_be_setup">Roblu must be setup. Tap next to begin.</string>
    <string name="next">Next</string>
    <string name="privacy">Privacy Policy and Terms of Use</string>
    <string name="agreement">By using Roblu, you agree to the Privacy Policy and Terms of Use located at https://www.roblu.net/privacy</string>
    <string name="agree">Agree</string>
    <string name="permissions">Permissions</string>
    <string name="requires_permissions">Roblu requires several permissions to work correctly. Please accept the dialog that appears after clicking next.</string>
    <string name="ready_to_use">Roblu is ready to use</string>
    <string name="head_of_team">Head of the scouting division of your team? Coach? Learn how to use Roblu with these official tutorials:</string>
    <string name="view_youtube_tutorials">View YouTube tutorials</string>
    <string name="welcome">Welcome to Roblu V4.</string>
    <string name="done">Done</string>

    <!-- Menus -->
    <string name="add_element">Add element</string>
    <string name="manually_add">Manually add event</string>
    <string name="search">Search</string>
    <string name="create_team">Create team</string>
    <string name="undo">Undo</string>
    <string name="mode">Mode</string>
    <string name="save">Save</string>
    <string name="delete_image">Delete image</string>
    <string name="edit_image">Edit image</string>
    <string name="save_image">Save image to device</string>
    <string name="confirm">Confirm</string>
    <string name="mark_won">Mark as won</string>
    <string name="open_tba">Open on TBA</string>
    <string name="delete_match">Delete match</string>
    <string name="bug_report">Bug report</string>
    <string name="match_settings">Match settings</string>
    <string name="add_match">Create match</string>

    <!-- Drawing -->
    <string name="pen">Pen</string>
    <string name="line">Line</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="ellipse">Ellipse</string>
    <string name="quad">Quad</string>
    <string name="line_width">Line width</string>
    <string name="line_color">Line color</string>
    <string name="set_line_width">Set line width</string>

    <!-- event selector -->
    <string name="event">Event:</string>
    <string name="import_from_event">Import form from event</string>

    <!-- match create -->
    <string name="type">Type:</string>
    <string name="match_num">Match #:</string>
    <string name="one">1</string>
    <string name="alliance">Alliance:</string>
    <string name="create_match">Create match</string>
    <string name="match">Match </string>
    <string name="team">Team: </string>
    <string name="select">Select</string>
    <string name="right_arrow">Right arrow</string>

</resources>
