<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pen"
        android:title="@string/pen"/>
    <item
        android:id="@+id/eraser"
        android:title="Eraser"/>
    <item
        android:id="@+id/line"
        android:title="@string/line"/>
    <item
        android:id="@+id/rectangle"
        android:title="@string/rectangle"/>
    <item
        android:id="@+id/circle"
        android:title="@string/circle"/>
    <item
        android:id="@+id/ellipse"
        android:title="@string/ellipse"/>
    <item
        android:id="@+id/quad"
        android:title="@string/quad"/>
    <item
        android:id="@+id/stroke"
        android:title="@string/line_width"/>
    <item
        android:id="@+id/color"
        android:title="@string/line_color"/>
</menu>