<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="275dp"
                android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/spinner_tip"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/type"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/spinner_tip"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/number_tip"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/type"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:maxLines="1"
        android:text="@string/one"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:layout_below="@id/number_tip"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/color_tip"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alliance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/alliances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_tip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_match"
        android:layout_below="@id/spinner2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>