

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:minHeight="?actionBarSize">
        </android.support.v7.widget.Toolbar>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:padding="5dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/event_create_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/event_name"
                android:nextFocusUp="@id/create_layout"
                android:nextFocusLeft="@id/create_layout"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/event_create_form_label"
            android:layout_width="wrap_content"
            android:layout_below="@id/name_wrapper"
            android:layout_height="wrap_content"
            android:text="@string/form_type"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="5dp"/>

        <Spinner
            android:id="@+id/form_type"
            android:padding="5dp"
            android:layout_below="@id/event_create_form_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/form_types"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/start_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_type"
            android:padding="5dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/start_date"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/end_wrapper"
            android:layout_below="@id/start_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/end_date"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</ScrollView>